synced from jetty 7.4.2-SNAPSHOT
git-svn-id: svn+ssh://dev.eclipse.org/svnroot/rt/org.eclipse.jetty/jetty/branches/jetty-8@3242 7e9141cc-0065-0410-87d8-b60c137991c4